--- a/코드로 배우는 스프링 웹 프로젝트 개정판/ex00/pom.xml
+++ b/코드로 배우는 스프링 웹 프로젝트 개정판/ex00/pom.xml
@@ -139,6 +139,14 @@
 		    <artifactId>log4j</artifactId>
 		    <version>1.2.17</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+		<dependency>
+		    <groupId>com.zaxxer</groupId>
+		    <artifactId>HikariCP</artifactId>
+		    <version>2.7.4</version>
+		</dependency>
+		
 		       
 	</dependencies>
     <build>
